# flask_pandas

./: .env  .env.production  .env.production.template  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile-venvdhi  Dockerfile.production  IMPLEMENTATION_PLAN.md  LARGE_FILE_UPLOAD_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  TESTING.md  WARP.md  compose-dhi.yaml  compose-prod.yaml  compose.dhi.yaml  compose.nginx.yml  compose.override.yaml  compose.production.yaml  compose.yaml  deploy.sh  docker-compose.nginx.yml  docker-compose.production.yml  gunicorn.conf.py  makefile  nginx.conf  pyproject.toml  pytest.ini  switch-env.sh
docs/: LARGE_FILE_UPLOAD_GUIDE.md  MAKEFILE_VALIDATION.md  PHASE_6_7_VALIDATION_SUMMARY.md  README.md
envs/: .env.template
migration_backup/: README.md  original_parser_requirements.txt  original_test_requirements.txt
parser/: .env  Dockerfile  app.py  config.py  forms.py  models.py  pages.py  routes.py
parser/input/: liveoptics_file.xlsx  rvtools_file.xlsx  rvtools_file_sample.xlsx
parser/sql/: init-db.sh
parser/static/: styles.css
parser/templates/: _navigation.html  base.html
parser/templates/pages/: analytics.html  create_project.html  create_workload.html  dashboard.html  edit_project.html  edit_workload.html  error.html  home.html  login.html  profile.html  register.html  reports.html  success.html  upload.html  upload_preview.html  view_project.html  view_workload.html
parser/transform/: data_validation.py  transform_lova.py  transform_rvtools.py
scripts/: clean-xattr.sh  load-env.sh  test-ci.sh  test.sh
tests/: README.md  conftest.py  test_additional_routes.py  test_app.py  test_data_validation.py  test_database.py  test_lova_transform.py  test_project_routes.py  test_routes.py  test_rvtools_transform.py  test_workload_routes.py
tests/sql/: init-user-db.sh
tests/test_files/: bad_lova_file.xlsx  bad_rvtools_file.xlsx  liveoptics_file_sample.xlsx  lova_expected_df.csv  rvtools_expected_df.csv  source_df.csv
